hphp/hack/test/dynamic_view/test_unknown_method.php.exp
File "test_unknown_method.php", line 6, characters 31-41:
  dynamic
File "test_unknown_method.php", line 5, characters 8-16:
Unbound name: something (a global function) (Naming[2049])
File "test_unknown_method.php", line 5, characters 8-16:
Unbound name: something (a global constant) (Naming[2049])
File "test_unknown_method.php", line 7, characters 10-11:
Invalid return type (Typing[4110])
  File "test_unknown_method.php", line 3, characters 19-21:
  This is an int
  File "test_unknown_method.php", line 5, characters 8-18:
  It is incompatible with a dynamic value, the result of calling a dynamic type as a function
